[gd_scene load_steps=6 format=3 uid="uid://gy28j8pdkqq3"]

[ext_resource type="Texture2D" uid="uid://bqohmhwq1onxo" path="res://assets/backgrounds/Paper Texture7.jpg" id="1_smhdi"]
[ext_resource type="FontFile" uid="uid://crhc1n00dhr4g" path="res://assets/fonts/Swansea/SwanseaBoldItalic-p3Dv.ttf" id="2_68fke"]
[ext_resource type="Script" uid="uid://eurq0oljkwm0" path="res://scenes_scripts/create_room.gd" id="2_o6ooa"]
[ext_resource type="FontFile" uid="uid://dai5fj1ja8e0p" path="res://assets/fonts/Swansea/SwanseaItalic-AwqD.ttf" id="3_68fke"]
[ext_resource type="Texture2D" uid="uid://riwpjuhsarcn" path="res://assets/icons/back.jpg" id="4_grbyu"]

[node name="CreateRoom" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_smhdi")
expand_mode = 2
script = ExtResource("2_o6ooa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_68fke")
theme_override_font_sizes/font_size = 32
text = "Configurações da Sala"

[node name="MinBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="LabelMinJog" type="Label" parent="MarginContainer/VBoxContainer/MinBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_68fke")
theme_override_font_sizes/font_size = 32
text = "Mínimo de jogadores:"

[node name="LabelMinCount" type="Label" parent="MarginContainer/VBoxContainer/MinBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_68fke")
theme_override_font_sizes/font_size = 32
text = "2"

[node name="MinPlus" type="Button" parent="MarginContainer/VBoxContainer/MinBox"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "+"

[node name="MinMinus" type="Button" parent="MarginContainer/VBoxContainer/MinBox"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "-"

[node name="MaxBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="LabelMaxJog" type="Label" parent="MarginContainer/VBoxContainer/MaxBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_68fke")
theme_override_font_sizes/font_size = 32
text = "Máximo de jogadores:"

[node name="LabelMaxCount" type="Label" parent="MarginContainer/VBoxContainer/MaxBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_68fke")
theme_override_font_sizes/font_size = 32
text = "2"

[node name="MaxPlus" type="Button" parent="MarginContainer/VBoxContainer/MaxBox"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "+"

[node name="MaxMinus" type="Button" parent="MarginContainer/VBoxContainer/MaxBox"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "-"

[node name="GridBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LabelSizeGrid" type="Label" parent="MarginContainer/VBoxContainer/GridBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_68fke")
theme_override_font_sizes/font_size = 32
text = "Tamanho tabuleiro:"

[node name="LabelCountGrid1" type="Label" parent="MarginContainer/VBoxContainer/GridBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_68fke")
theme_override_font_sizes/font_size = 32
text = "5"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_68fke")
theme_override_font_sizes/font_size = 32
text = "x"

[node name="LabelCountGrid2" type="Label" parent="MarginContainer/VBoxContainer/GridBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_68fke")
theme_override_font_sizes/font_size = 32
text = "5"

[node name="GridPlus" type="Button" parent="MarginContainer/VBoxContainer/GridBox"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "+"

[node name="GridMinus" type="Button" parent="MarginContainer/VBoxContainer/GridBox"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "-"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 250

[node name="okButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 32
text = "OK!"

[node name="BackButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 1
icon = ExtResource("4_grbyu")
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/okButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
